# SyncBuilder

./: .cproject  .gitignore  .gitmodules  .project  README.md  SyncBuilder.sln  sbuilder
src/: Demoes.cfg  SyncBuilder.cpp  SyncBuilder.h  SyncBuilder.vcxproj  SyncBuilder.vcxproj.filters  WinDemoes.cfg  autogen.sh  automakeam.sh  clean.sh  common.h  configure.ac  main.cpp  sbuilder  xgetopt.cpp  xgetopt.h
src/CfgParser/: CfgParser.cpp  CfgParser.h  CfgParserTest.cpp  e.cfg
src/Common/: Cmd.cpp  Cmd.h  ComDef.h  ReplaceAll.cpp  ReplaceAll.h  SyncFstream.cpp  SyncFstream.h
src/DataPool/: DataPool.cpp  DataPool.h  DataPoolTest.cpp
src/EventMgr/: EventCfg.cpp  EventCfg.h  EventMgr.cpp  EventMgr.h  EventMgrTest.cpp  EventRunner.cpp  EventRunner.h  Wine.cfg  e.cfg
src/Notice/: NoticeCenter.cpp  NoticeCenter.h  NoticeTimer.cpp  NoticeTimer.h  testNotice.cpp
src/ProtocolAdapter/: AdapterBase.cpp  AdapterBase.h  CurlBuilder.cpp  CurlBuilder.h  Ftp.cfg  FtpAdapter.cpp  FtpAdapter.h  LocAdapter.cpp  LocAdapter.h  Net.cfg  NetCfg.cpp  NetCfg.h  SyncAdapter.cpp  SyncAdapter.h  SyncBindCmd.cpp  SyncBindCmd.h  WinNet.cfg  testAdapter.cpp  testCurl.cpp
src/SyncMgr/: DemoCfg.cpp  DemoCfg.h  SMgrDemoCfg.cpp  SMgrDemoCfg.h  SMgrSyncDemo.cpp  SMgrSyncDemo.h  SyncDemo.cpp  SyncDemo.h  SyncMgr.cpp  SyncMgr.h  WinDemoes.cfg  db.sql  testSyncMgr.cpp
src/SyncServer/: BindCmdMgr.cpp  BindCmdMgr.h  ConClient.cpp  ConClient.h  DemoCfg.cpp  DemoCfg.h  Demoes.cfg  FileCmdMgr.cpp  FileCmdMgr.h  HttpCmdMgr.cpp  HttpCmdMgr.h  LoginCmdBase.cpp  LoginCmdBase.h  SServerDemoCfg.cpp  SyncDemo.h  (+17 more)
(+19 files in other folders)
